--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -11,7 +11,7 @@ html {
 
 body {
     width: 100%;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 #window {
@@ -46,7 +46,7 @@ h1{
     font-size: 15px;
     width: 5%;
     color: darkgrey;
-    margin-left: 260px;
+    margin-left: 240px;
 }
 
 #modal-body{
